# ESP32S3_Adapter_ESP_IDF

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.env  flash_app_args  flash_args  flasher_args.json  kconfigs.in  kconfigs_projbuild.in  ldgen_libraries  ldgen_libraries.in  partitions_16mb.csv  project_description.json  sdkconfig  sdkconfig.old
bootloader-prefix/src/bootloader-stamp/: bootloader-source_dirinfo.txt
bootloader-prefix/tmp/: bootloader-cfgcmd.txt  bootloader-mkdirs.cmake
config/: kconfig_menus.json  sdkconfig.cmake  sdkconfig.h  sdkconfig.json
doc/: ESP32S3_Adapter(2023.8.28)邮寄器件BOM.xls  ESP32_DSLogic PLus-la-231121-143811.dsl  STM32_DSLogic PLus-la-231121-100333.dsl
main/: CMakeLists.txt  app_config.h  app_protocol.c  app_protocol.h  board.c  board.h  cellular_4g.c  cellular_4g.h  cellular_4g_protocol.c  cellular_4g_protocol.h  ch9434.c  ch9434.h  e34_2g4d20d.c  e34_2g4d20d.h  main.c  main_ch9434.c  radio_service.c  radio_service.h  rfid_response.c  rfid_response.h  rfid_store.c  rfid_store.h  serial_router.c  serial_router.h
test/: host_app_protocol_test.c  run_host_tests.sh
