idf_component_register(SRCS
                    "app_protocol.c"
                    "board.c"
                    "ch9434.c"
                    "e34_2g4d20d.c"
                    "main.c"
                    "radio_service.c"
                    "serial_router.c"
                    INCLUDE_DIRS ".")
